--- a/templates/base.html
+++ b/templates/base.html
@@ -142,59 +142,42 @@
 
 <!-- Footer -->
 <footer class="footer mt-auto py-3">
-  <p class="m-0 text-center text-white">
-    {% block copyright %}
-      Graphic Design Hub - efficient and high quality service
-    {% endblock copyright %}
-  </p>
+  <div class="container text-center">
 
-  <!-- Mailchimp form -->
-  <div id="mc_embed_signup">
-    <form action="https://herokuapp.us11.list-manage.com/subscribe/post?u=237a6765548848b4687ce3af5&amp;id=266038ad0f&amp;f_id=0010e8e1f0"
-          method="post"
-          id="mc-embedded-subscribe-form"
-          name="mc-embedded-subscribe-form"
-          class="validate" target="_blank">
-      <div id="mc_embed_signup_scroll">
-        <h2>Subscribe</h2>
-        <div class="indicates-required">
-          <span class="asterisk">*</span> indicates required
+    <!-- Mailchimp form -->
+    <div id="mc_embed_signup" class="mt-3">
+      <form action="https://herokuapp.us11.list-manage.com/subscribe/post?u=237a6765548848b4687ce3af5&amp;id=266038ad0f&amp;f_id=0010e8e1f0"
+            method="post"
+            id="mc-embedded-subscribe-form"
+            name="mc-embedded-subscribe-form"
+            class="validate" target="_blank">
+        <h2 class="text-white">Subscribe</h2>
+        <div class="indicates-required text-white">
+          <span class="asterisk text-white">*</span> indicates required
         </div>
-        <div class="mc-field-group">
-          <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
-          <input type="email" name="EMAIL" class="required email"
-                 id="mce-EMAIL" required>
+        <div class="d-flex justify-content-center mt-2">
+          <input type="email"
+                 name="EMAIL"
+                 id="mce-EMAIL"
+                 class="form-control mr-2"
+                 placeholder="Enter your email"
+                 style="max-width: 300px;" required>
+          <input type="submit"
+                 name="subscribe"
+                 id="mc-embedded-subscribe"
+                 class="button btn btn-primary"
+                 value="Subscribe">
         </div>
-        <div id="mce-responses" class="clear foot">
-          <div class="response" id="mce-error-response"
-               style="display:none;"></div>
-          <div class="response" id="mce-success-response"
-               style="display:none;"></div>
-        </div>
-        <div aria-hidden="true" style="position:absolute; left:-5000px;">
-          <input type="text" name="b_237a6765548848b4687ce3af5_266038ad0f"
-                 tabindex="-1" value="">
-        </div>
-        <div class="optionalParent">
-          <div class="clear foot">
-            <input type="submit" name="subscribe"
-                   id="mc-embedded-subscribe"
-                   class="button" value="Subscribe">
-            <p style="margin:0 auto;">
-              <a href="http://eepurl.com/jmiboc"
-                 title="Mailchimp - email marketing made easy and fun">
-                <span style="display:inline-block; background-color:transparent; border-radius:4px;">
-                  <img class="refferal_badge"
-                       src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
-                       alt="Intuit Mailchimp"
-                       style="width:220px; height:40px; display:flex; padding:2px 0; justify-content:center; align-items:center;">
-                </span>
-              </a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </form>
+      </form>
+    </div>
+
+    <!-- Copyright moved below -->
+    <p class="m-0 mt-3 text-muted small">
+      {% block copyright %}
+        © 2025 Graphic Design Hub – efficient and high quality service
+      {% endblock %}
+    </p>
+
   </div>
 </footer>
 
