--- a/templates/base.html
+++ b/templates/base.html
@@ -146,28 +146,35 @@
 
     <!-- Mailchimp form -->
     <div id="mc_embed_signup" class="mt-3">
-      <form action="https://herokuapp.us11.list-manage.com/subscribe/post?u=237a6765548848b4687ce3af5&amp;id=266038ad0f&amp;f_id=0010e8e1f0"
-            method="post"
-            id="mc-embedded-subscribe-form"
-            name="mc-embedded-subscribe-form"
-            class="validate" target="_blank">
-        <h2 class="text-white">Subscribe</h2>
-        <div class="indicates-required text-white">
-        </div>
-        <div class="d-flex justify-content-center mt-2">
-          <input type="email"
-                 name="EMAIL"
-                 id="mce-EMAIL"
-                 class="form-control mr-2"
-                 placeholder="Enter your email"
-                 style="max-width: 300px;" required>
-          <input type="submit"
-                 name="subscribe"
-                 id="mc-embedded-subscribe"
-                 class="button btn btn-primary"
-                 value="Subscribe">
-        </div>
-      </form>
+  <form action="https://herokuapp.us11.list-manage.com/subscribe/post?u=237a6765548848b4687ce3af5&amp;id=266038ad0f&amp;f_id=0010e8e1f0"
+        method="post"
+        id="mc-embedded-subscribe-form"
+        name="mc-embedded-subscribe-form"
+        class="validate" target="_blank" novalidate>
+    <h2 class="text-white">Subscribe</h2>
+    <div class="indicates-required text-white">
+      <span class="asterisk text-white">*</span> indicates required
+    </div>
+    <div class="d-flex justify-content-center mt-2">
+      <input type="email"
+             name="EMAIL"
+             id="mce-EMAIL"
+             class="form-control mr-2"
+             placeholder="Enter your email"
+             style="max-width: 300px;" required>
+      <input type="submit"
+             name="subscribe"
+             id="mc-embedded-subscribe"
+             class="button btn btn-primary"
+             value="Subscribe">
+    </div>
+
+    <!-- Feedback messages -->
+    <div id="mce-responses" class="clear foot mt-2">
+      <div class="response text-danger" id="mce-error-response" style="display:none"></div>
+      <div class="response text-success" id="mce-success-response" style="display:none"></div>
+    </div>
+  </form>
     </div>
 
     <!-- Copyright moved below -->
