--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,8 +9,6 @@ body {
   flex-direction: column;
   min-height: 100vh;
   padding-top: 72px;
-  background: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.75)),
-              url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
   background-size: cover;
   color: #555;
   font-family: 'Lato', sans-serif;
@@ -19,6 +17,12 @@ body {
 
 main {
   flex: 1;
+  main {
+  flex: 1;
+  background: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.75)),
+              url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
+  background-size: cover;
+}
 }
 
 /* Icons */
